<resources>
    <string name="app_name" translatable="false">FilmeO</string>
    <string name="adicionar_Filme">Add Movie</string>
    <string name="label_adicionar_filme">FilmeO - Add Movie</string>
    <string name="insira_nome_do_filme">INSERT FILM NAME</string>
    <string name="insiraDescricao">ENTER A DESCRIPTION FOR THE MOVIE</string>
    <string name="adicionarDiretor">INSERT THE DIRECTOR</string>
    <string name="diretor">DIRECTOR</string>
    <string name="adicionarNovoDiretor">ADD NEW DIRECTOR</string>
    <string name="insira_nome_diretor">ENTER THE NAME OF THE DIRECTOR</string>
    <string name="nome">NAME</string>
    <string name="adicionar">ADD</string>
    <string name="ok">OK</string>
    <string name="assistido">WATCHED</string>
    <string name="filme_assistido">WATCHED</string>
    <string name="filme_nao_assistido">NOT WATCHED</string>
    <string name="title_activity_filmes_assistidos">FILMS WATCHED</string>
    <string name="title_activity_filmes_nao_assistidos">FILMS NOT WATCHED</string>
    <string name="az">ALPHABETICAL A - Z</string>
    <string name="za">ALPHABETICAL Z - A</string>
    <string name="erro_insere_ator">PROPERLY INSERT THE DATA</string>
    <string name="adicione_genero">ADD GENDER</string>
    <string name="action_settings" translatable="false">action_settings</string>
    <string name="editar">EDIT</string>
    <string name="deletar">DELETE</string>
    <string name="tema">THEME</string>
    <string name="claro">LIGTH</string>
    <string name="escuro">DARK</string>
    <string name="deseja_excluir">DO YOU WISH TO EXCLUDE THAT DIRECTOR?</string>
    <string name="sim">YES</string>
    <string name="nao">NO</string>
    <string name="autor">Author: VINICIUS DA SILVA SOUZA</string>
    <string name="descricao">The purpose of this program is to organize the films watched and not watched, the films are organized by genres, within each film it is possible to register the name, genres and directors</string>
    <string name="sobre">ABOUT</string>
    <string name="cancelar">CANCEL</string>

    <string name="editarFilme">EDIT MOVIE</string>
    <string name="erro_insere_diretor">Insira um Diretor ao filme</string>
</resources>
